refactoring the code

--- a/README.Rmd
+++ b/README.Rmd
@@ -35,26 +35,26 @@ devtools::install_github("alexeilutay/YDisk4R")
 Функция ищет значение YDisk в Global Environment или другое, начинающееся с OAuth y0_... Найденное значение использует в качестве токена для обращения к Yandex Disk.
 
 ```{r echo=TRUE, eval = FALSE, message=FALSE, warning=FALSE}
-YD_oath <- set_YD_oath()
+yd_oauth <- set_YD_oath()
 ```
 
 ***
 
 **get_YD_folders**
 
-Возвращает список папок по указанному пути. По умолчанию, path - корневая папка Yandex Disk, limit = 25.
+Возвращает список папок по указанному пути и все их свойства. По умолчанию, path - корневая папка Yandex Disk, limit = 25.
 
 ```{r echo=TRUE, eval = FALSE, message=FALSE, warning=FALSE}
-get_YD_folders(path = "disk:/Загрузки/", set_YD_oath())
+get_YD_folders(path = "disk:/Загрузки/", token = yd_oauth)
 ```
 ***
 
 **get_YD_files**
 
-Возвращает список файлов по указанному пути. По умолчанию, path - корневая папка Yandex Disk, а limit = 25.
+Возвращает список файлов по указанному пути и все их свойства. Для иллюстраций Yandex предоставляет набор URL, используя которые можно скачать копии различных размеров. В возвращемой таблице все эти ссылки слиты в одну ячейку по шаблону {format }    По умолчанию, path - корневая папка Yandex Disk, а limit = 25.
 
 ```{r echo=TRUE, eval = FALSE, message=FALSE, warning=FALSE}
-get_YD_files(path = "disk:/Загрузки/", YD_oath = YD_oath, limit = 5)
+get_YD_files(path = "disk:/Загрузки/", token = set_YD_oauth(), limit = 10)
 ```
 ***
 
@@ -65,7 +65,7 @@ get_YD_files(path = "disk:/Загрузки/", YD_oath = YD_oath, limit = 5)
 ```{r echo=TRUE, eval = FALSE, message=FALSE, warning=FALSE}
 upload_file_2YD(path = "disk:/Загрузки/", 
                 disk_fname = "../../bookmarks.html", 
-                 overwrite = TRUE, YD_oath = set_YD_oath())
+                 overwrite = TRUE, token = yd_oauth)
 ```
 
 Выводит статус загрузки -- если видите 201, значит файл на месте. 
@@ -75,7 +75,7 @@ upload_file_2YD(path = "disk:/Загрузки/",
 Возвращает полный список public-файлов со всеми деталями в виде dataframe.
 
 ```{r echo=TRUE, eval = FALSE, message=FALSE, warning=FALSE}
-my_public_files(limit = 100, YDisk4R::set_YD_oath())
+my_public_files(limit = 100, token = set_YD_oauth())
 ```
 
 ## Обратная связь
