prepare for public version

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ output:
   github_document:
     toc: yes
     toc_depth: 4
-date: '2023-06-15'
+date: '2024-06-09'
 ---
 
 ### Установка
@@ -16,23 +16,27 @@ devtools::install_github("alexeilutay/YDisk4R")
 
 ### Перечень функций
 
-Приведенные ниже примеры описывают не все возможности функций. 
-
 Перед началом работы рекомендуется [получить Yandex OAuth](https://yandex.ru/dev/id/doc/ru/register-client) и принять решение о том, где он будет храниться на компьютере.
+
+Приведенные ниже примеры описывают не все возможности функций. 
 
 **Хранение в Renviron**
 
-Этот способ считается недостаточно безопасным (файл .Renviron хранится в домашней директории компьютера в виде текстового файл), но... who cares, да?  
+Этот способ считается недостаточно безопасным (файл .Renviron хранится в домашней директории компьютера в виде текстового файла), тем не менее этот способ достаточно популярен.  
 
 - открыть file.edit("~/.Renviron") 
 
-- записать токен в строке вида YDisk=OAuth y0_...... (не забудьте о переносе строки в конце)
+- записать полученный токен в строке вида YDisk=OAuth y0_......
 
 - сохранить файл "~/.Renviron"
 
+Примечание: не забудьте о переносе строки в конце списка файла Renviron.
+
 **set_YD_oath**
 
-Функция ищет значение YDisk в Global Environment или другое, начинающееся с OAuth y0_... Найденное значение использует в качестве токена для обращения к Yandex Disk.
+Функция сначала ищет значение YDisk в Global Environment. Если не находит YDisk, тогда ищет иную переменную, значение которой начинается OAuth y0_... 
+
+Функция возвращает найденное значение, которое затем можно использовать в качестве токена для обращения к Yandex Disk.
 
 ```{r echo=TRUE, eval = FALSE, message=FALSE, warning=FALSE}
 yd_oauth <- set_YD_oath()
@@ -42,7 +46,7 @@ yd_oauth <- set_YD_oath()
 
 **get_YD_folders**
 
-Возвращает список папок по указанному пути и все их свойства. По умолчанию, path - корневая папка Yandex Disk, limit = 25.
+Возвращает список папок по указанному пути и все их свойства. По умолчанию, path - корневая папка Yandex Disk, limit = 100.
 
 ```{r echo=TRUE, eval = FALSE, message=FALSE, warning=FALSE}
 get_YD_folders(path = "disk:/Загрузки/", token = yd_oauth)
@@ -51,7 +55,9 @@ get_YD_folders(path = "disk:/Загрузки/", token = yd_oauth)
 
 **get_YD_files**
 
-Возвращает список файлов по указанному пути и все их свойства. Для иллюстраций Yandex предоставляет набор URL, используя которые можно скачать копии различных размеров. В возвращемой таблице все эти ссылки слиты в одну ячейку по шаблону {format }    По умолчанию, path - корневая папка Yandex Disk, а limit = 25.
+Возвращает список файлов по указанному пути и все их свойства. Для иллюстраций Yandex предоставляет набор URL, используя которые можно скачать копии различных размеров. В возвращемой таблице все эти ссылки слиты в одну ячейку по шаблону {format}
+
+По умолчанию, path - корневая папка Yandex Disk, а limit = 100.
 
 ```{r echo=TRUE, eval = FALSE, message=FALSE, warning=FALSE}
 get_YD_files(path = "disk:/Загрузки/", token = set_YD_oauth(), limit = 10)
@@ -79,5 +85,9 @@ my_public_files(limit = 100, token = set_YD_oauth())
 ```
 
 ## Обратная связь
+
+Пакет сделан для моего личного использования, у меня нет планов доведения пакета до CRAN статуса. 
+
+Если желаете развивать, код открыт. 
 
 Если сделаете pull request, постараюсь принять.
